src/test/ui/hrtb/issue-62203-hrtb-ice.stderr
error[E0271]: expected `[closure@$DIR/issue-62203-hrtb-ice.rs:42:17: 42:20]` to be a closure that returns `Unit3`, but it returns `Unit4`
  --> $DIR/issue-62203-hrtb-ice.rs:39:9
   |
LL |       let v = Unit2.m(
   |                     - required by a bound introduced by this call
LL | /         L {
LL | |
LL | |
LL | |             f : |x| { drop(x); Unit4 }
LL | |         });
   | |_________^ expected struct `Unit3`, found struct `Unit4`
   |
note: required for `L<[closure@$DIR/issue-62203-hrtb-ice.rs:42:17: 42:20]>` to implement `for<'r> T0<'r, (&'r u8,)>`
  --> $DIR/issue-62203-hrtb-ice.rs:17:16
   |
LL | impl<'a, A, T> T0<'a, A> for L<T>
   |                ^^^^^^^^^     ^^^^
note: required by a bound in `T1::m`
  --> $DIR/issue-62203-hrtb-ice.rs:27:12
   |
LL |     fn m<'a, B: Ty<'a>, F>(&self, f: F) -> Unit1
   |        - required by a bound in this
LL |     where
LL |         F: for<'r> T0<'r, (<Self as Ty<'r>>::V,), O = <B as Ty<'r>>::V>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `T1::m`

error[E0271]: expected `[closure@$DIR/issue-62203-hrtb-ice.rs:42:17: 42:20]` to be a closure that returns `Unit3`, but it returns `Unit4`
  --> $DIR/issue-62203-hrtb-ice.rs:39:9
   |
LL |       let v = Unit2.m(
   |                     - required by a bound introduced by this call
LL | /         L {
LL | |
LL | |
LL | |             f : |x| { drop(x); Unit4 }
LL | |         });
   | |_________^ expected struct `Unit3`, found struct `Unit4`
   |
note: required for `L<[closure@$DIR/issue-62203-hrtb-ice.rs:42:17: 42:20]>` to implement `for<'r> T0<'r, (&'r u8,)>`
  --> $DIR/issue-62203-hrtb-ice.rs:17:16
   |
LL | impl<'a, A, T> T0<'a, A> for L<T>
   |                ^^^^^^^^^     ^^^^
note: required by a bound in `T1::m`
  --> $DIR/issue-62203-hrtb-ice.rs:27:51
   |
LL |     fn m<'a, B: Ty<'a>, F>(&self, f: F) -> Unit1
   |        - required by a bound in this
LL |     where
LL |         F: for<'r> T0<'r, (<Self as Ty<'r>>::V,), O = <B as Ty<'r>>::V>,
   |                                                   ^^^^^^^^^^^^^^^^^^^^ required by this bound in `T1::m`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.
